<resources>
    <string name="app_name">Ilo</string>
    <string name="iloa_taskustasi">Iloa taskustasi!</string>
    <string name="aloita">Aloita</string>
    <string name="positivequotes">Positive Quotes</string>
    <string name="namefield">Nimi</string>
    <string name="hengitysharjoitus">Hengitysharjoitus</string>
    <string name="kiitollisuuslista">Kiitollisuuslista</string>
    <string name="hengitysharjoitusHeader">Hengitysharjoitus</string>
    <string name="hInstruction">Ota mukava asento. Hengitä syvään ja pidätä hetki. Kun vapautat hengityksen, keskity puhaltamaan huolesi kauas pois.\nJatka näin muutama minuutti ja tunne, kuinka stressi helpottaa.</string>
    <string name="breathe">Hengitä sisään</string>
    <string name="kiitollisuuslistaHeader">Kiitollisuuslista</string>
    <string name="gInstruction">Etsi rauhassa paikka ja aika, halutessasi ota viereen kupponen teetä ja villasukat.\nEi ole väliä, onko listaamasi asia iso tai pieni, kunhan se on positiivinen.</string>
    <string name="add_button">Lisää</string>
</resources>