<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".BreatheActivity">

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/hengitysharjoitusHeader"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view_circle_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Header"
        android:lineSpacingExtra="4dp"
        android:padding="10dp"
        android:text="@string/hInstruction"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view_circle_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view_circle_outer"
        android:layout_width="298dp"
        android:layout_height="297dp"
        android:layout_above="@id/instruction"
        android:background="@drawable/bg_circle_outer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/breathe"
        android:textAllCaps="false"
        android:textColor="@color/ilo_blue"
        android:lineSpacingExtra="2dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_circle_outer"
        app:layout_constraintEnd_toEndOf="@+id/view_circle_outer"
        app:layout_constraintStart_toStartOf="@+id/view_circle_outer"
        app:layout_constraintTop_toTopOf="@+id/view_circle_outer"
        app:layout_constraintVertical_bias="0.519" />

</androidx.constraintlayout.widget.ConstraintLayout>